# volcan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: architecture.md  architecture_v0.1.md  paper_draft.md
paper/: README.md  amplification.md  arc_prize_submission.md  refs.bib  release_notes.md  volcan.tex
research/: nca_prior_art.md  survey.md  week8_scaling_research.md
scripts/: dream_code_generate.py  dream_generate.py  eval_batch.py  eval_pretrained.py  generate_synthetic.py  hyperttt_stage1.py  hyperttt_stage2.py  make_gallery.py  pretrain.py  smoke_test.py  smoke_test_volcan.py
src/volcan/: __init__.py  arc.py  code_dreamer.py  code_filter.py  dream.py  dream_filter.py  dsl.py  echo.py  hierarchy.py  hyperttt.py  lora.py  losses.py  models.py  moe.py  mycelial.py  objectness.py  pretrain.py  spectral.py  symmetry.py  synth.py  training.py  training_volcan.py  viz.py  volcan_cell.py
